# graphic-library

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pixel.cpp
shaders/: frag.fs  vertex.vs
source/: target.cpp  target.h  variables.cpp  variables.h
source/methods/: Loader.cpp  Loader.h  compileShader.cpp  compileShader.h
